log
Sun Mar 22 03:37:27 AM UTC 2026: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:10: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Wimplicit-function-declaration]
   51 |          pushback(L,num);
      |          ^~~~~~~~
      |          pushBack
39c274f
Sun Mar 22 03:37:46 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2eb3c8c
Sun Mar 22 03:44:02 AM UTC 2026: 
 exercises.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   68 |       *dato = next(L);
      |             ^
d8d2fe4
Sun Mar 22 03:45:13 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
fd9d504
Sun Mar 22 03:46:43 AM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
af499d1
Sun Mar 22 03:47:33 AM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
f40c500
Sun Mar 22 03:55:20 AM UTC 2026: 
 exercises.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:37: error: expected ‘;’ before ‘}’ token
   89 |          dato = (int*) popCurrent(L)
      |                                     ^
      |                                     ;
   90 |       }
      |       ~                              
cc2767a
Sun Mar 22 03:55:34 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2a4b515
Sun Mar 22 03:56:17 AM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
c3eb9f9
Sun Mar 22 04:06:00 AM UTC 2026: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:120:18: error: ‘AUX’ undeclared (first use in this function)
  120 |    while(dato != AUX)
      |                  ^~~
exercises.c:120:18: note: each undeclared identifier is reported only once for each function it appears in
28bc7db
Sun Mar 22 04:06:14 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:15: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
  112 |    while(dato != NULL)
      |               ^
exercises.c:111:10: note: ‘dato’ was declared here
  111 |    void* dato;
      |          ^~~~
cc1: all warnings being treated as errors
ab5ddf5
Sun Mar 22 04:07:02 AM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
ccc43c0
Sun Mar 22 04:07:37 AM UTC 2026: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:4: error: dereferencing ‘void *’ pointer [-Werror]
  112 |    *dato = top(P1);
      |    ^~~~~
exercises.c:112:10: error: invalid use of void expression
  112 |    *dato = top(P1);
      |          ^
exercises.c:115:7: error: dereferencing ‘void *’ pointer [-Werror]
  115 |       *dato = top(P1);
      |       ^~~~~
exercises.c:115:13: error: invalid use of void expression
  115 |       *dato = top(P1);
      |             ^
exercises.c:120:4: error: dereferencing ‘void *’ pointer [-Werror]
  120 |    *dato = top(aux);
      |    ^~~~~
exercises.c:120:10: error: invalid use of void expression
  120 |    *dato = top(aux);
      |          ^
exercises.c:126:7: error: dereferencing ‘void *’ pointer [-Werror]
  126 |       *dato = top(aux);
      |       ^~~~~
exercises.c:126:13: error: invalid use of void expression
  126 |       *dato = top(aux);
      |             ^
cc1: all warnings being treated as errors
eca1bab
Sun Mar 22 04:08:02 AM UTC 2026: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
c21a3ce
Sun Mar 22 04:10:27 AM UTC 2026: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
dcf3f26
Sun Mar 22 04:11:11 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
f98cf0f
Sun Mar 22 04:13:42 AM UTC 2026: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
a6eb0cc
